test/corpus/test.txt
==================
Simple function
==================

fn main() {
  print("Hello World!")
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (expression_statement
        (call_expression
          function: (identifier)
          arguments: (argument_list
            (string_literal)))))))

==================
Function with parameters and return type
==================

fn double(arg Int) Int {
  arg * 2
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type
          (type_identifier))))
    return_type: (type
      (type_identifier))
    body: (block
      (expression_statement
        (binary_expression
          (identifier)
          (number_literal))))))

==================
Struct definition
==================

struct Vec3 {
  x Int
  y Int
  z Int
}

---

(source_file
  (struct_definition
    name: (type
      (type_identifier))
    (field
      name: (identifier)
      type: (type
        (type_identifier)))
    (field
      name: (identifier)
      type: (type
        (type_identifier)))
    (field
      name: (identifier)
      type: (type
        (type_identifier)))))

==================
Union definition
==================

union Option(T) {
  none
  T
}

---

(source_file
  (union_definition
    name: (type
      (generic_type
        name: (type_identifier)
        (type
          (type_identifier))))
    (union_case
      label: (identifier))
    (union_case
      label: (type_identifier))))

==================
Variable declarations with compound assignments
==================

fn test() {
  mut x = 5
  x += 10
  x *= 2
  x ++= "suffix"
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (declaration
        name: (identifier)
        value: (number_literal))
      (expression_statement
        (compound_assignment_expression
          left: (identifier)
          right: (number_literal)))
      (expression_statement
        (compound_assignment_expression
          left: (identifier)
          right: (number_literal)))
      (expression_statement
        (compound_assignment_expression
          left: (identifier)
          right: (string_interpolation))))))

==================
Bitwise operations
==================

fn bitwise(a Int, b Int) Int {
  let x = a & b
  let y = a | b
  let z = a ^ b
  let w = ~a
  let l = a << 2
  let r = a >> 2
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type
          (type_identifier)))
      (parameter
        name: (identifier)
        type: (type
          (type_identifier))))
    return_type: (type
      (type_identifier))
    body: (block
      (declaration
        name: (identifier)
        value: (binary_expression
          (identifier)
          (identifier)))
      (declaration
        name: (identifier)
        value: (binary_expression
          (identifier)
          (identifier)))
      (declaration
        name: (identifier)
        value: (binary_expression
          (identifier)
          (identifier)))
      (declaration
        name: (identifier)
        value: (unary_expression
          (identifier)))
      (declaration
        name: (identifier)
        value: (binary_expression
          (identifier)
          (number_literal)))
      (declaration
        name: (identifier)
        value: (binary_expression
          (identifier)
          (number_literal))))))

==================
Bitwise compound assignments
==================

fn test() {
  mut x = 10
  x &= 5
  x |= 3
  x ^= 7
  x <<= 2
  x >>= 1
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (declaration
        name: (identifier)
        value: (number_literal))
      (expression_statement
        (compound_assignment_expression
          left: (identifier)
          right: (number_literal)))
      (expression_statement
        (compound_assignment_expression
          left: (identifier)
          right: (number_literal)))
      (expression_statement
        (compound_assignment_expression
          left: (identifier)
          right: (number_literal)))
      (expression_statement
        (compound_assignment_expression
          left: (identifier)
          right: (number_literal)))
      (expression_statement
        (compound_assignment_expression
          left: (identifier)
          right: (number_literal))))))

==================
If expression
==================

fn check(n Int) String {
  if n % 2 == 0 {
    "Even"
  } else {
    "Odd"
  }
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type
          (type_identifier))))
    return_type: (type
      (type_identifier))
    body: (block
      (expression_statement
        (if_expression
          condition: (binary_expression
            (binary_expression
              (identifier)
              (number_literal))
            (number_literal))
          consequence: (block
            (expression_statement
              (string_interpolation)))
          alternative: (block
            (expression_statement
              (string_interpolation))))))))

==================
For loop
==================

fn loop() {
  for 1..=5 |i| {
    print(i)
  }
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (expression_statement
        (for_expression
          iterable: (range_literal
            (number_literal)
            (number_literal))
          element: (identifier)
          body: (block
            (expression_statement
              (call_expression
                function: (identifier)
                arguments: (argument_list
                  (identifier))))))))))

==================
Actor definition
==================

actor Counter {
  count Int

  fn increment(self) {
    self.count += 1
  }
}

---

(source_file
  (actor_definition
    name: (type
      (type_identifier))
    (field
      name: (identifier)
      type: (type
        (type_identifier)))
    (function_definition
      name: (identifier)
      parameters: (parameter_list
        (parameter
          name: (identifier)))
      body: (block
        (expression_statement
          (compound_assignment_expression
            left: (member_expression
              object: (identifier)
              property: (identifier))
            right: (number_literal)))))))

==================
Assert expressions
==================

fn test() {
  assert x > 0
  (x > 0).assert
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (expression_statement
        (assert_expression
          (binary_expression
            (identifier)
            (number_literal))))
      (expression_statement
        (member_expression
          object: (parenthesized_expression
            (binary_expression
              (identifier)
              (number_literal)))
          property: (identifier))))))

==================
Try expressions
==================

fn test() {
  let x = try foo()
  let y = getValue().try
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (declaration
        name: (identifier)
        value: (try_expression
          (call_expression
            function: (identifier)
            arguments: (argument_list))))
      (declaration
        name: (identifier)
        value: (member_expression
          object: (call_expression
            function: (identifier)
            arguments: (argument_list))
          property: (identifier))))))

==================
Module-qualified function call
==================

fn test() {
  let result = Matrix::multiply(a, b)
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (declaration
        name: (identifier)
        value: (call_expression
          function: (scoped_identifier
            module: (type_identifier)
            name: (identifier))
          arguments: (argument_list
            (identifier)
            (identifier)))))))

==================
UFCS method call with module qualifier
==================

fn test() {
  let result = my_matrix.Matrix::multiply(other)
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (declaration
        name: (identifier)
        value: (call_expression
          function: (member_expression
            object: (identifier)
            property: (scoped_identifier
              module: (type_identifier)
              name: (identifier)))
          arguments: (argument_list
            (identifier)))))))
